--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Fira Sans', Arial, sans-serif;
   margin: 0px;
