--- a/assets/css/experiencia.css
+++ b/assets/css/experiencia.css
@@ -100,6 +100,7 @@
   }
   .experiencia .subtitulo {
     color: #141414;
+    margin-top: initial;
   }
   .experiencia-texto {
     font-size: 1.25rem;
